Fix score width on mobile

--- a/root/src/styles.css
+++ b/root/src/styles.css
@@ -1,3 +1,13 @@
 h1, h2, h3, h4, h5, h6, p {
     margin: 0px !important;
 }
+
+.score {
+    width: 60%;
+}
+
+@media screen and (max-width: 1100px) {
+    .score {
+        width: 100%;
+    }    
+}
